[workspace]
members = ["http-client", "ipfs-client-http-req", "png_utils", "tests_utils"]
resolver = "2"

################################################################################
# [patch."https://github.com/Interstellar-Network/lib-garble-rs.git"]
# lib-garble-rs = { path = "../lib-garble-rs/lib-garble-rs/" }
################################################################################
